--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         codeUrl: buildUrl + "/test2.wasm",
         streamingAssetsUrl: "StreamingAssets",
         companyName: "DefaultCompany",
-        productName: "e",
+        productName: "Build V.1.0",
         productVersion: "0.1",
         showBanner: unityShowBanner,
       };
